# hostcv

./: Siddharth Jain Daily Diary Report.docx  Siddharth Jain Daily Diary Report.txt  docker-compose.yml  readme.md  test_user_role.py
Backend/: .env  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  create_admin_user.py  cv_main.py  download_nltk_data.py  jd_main.py  main.py  ollama_client.py  pdf_to_text.py  pyproject.toml  requirements-cpu.txt  requirements.txt  save_json.py
Backend/app/: README.md  auth.py  crud.py  database.py  llm.py  main.py  matching.py  models.py  parsing.py  schemas.py
Backend/schemas/json/: extracted_jd_format.json  extracted_resume_format.json
Backend/scripts/: README.md  run_tests.sh  verify_startup.py
Backend/tests/: README.md  conftest.py  test_app.py  test_auth.py  test_crud.py  test_llm.py  test_main.py  test_matching.py  test_models.py  test_parsing.py  test_schemas.py
Frontend/: .env  README.md  package-lock.json  package.json  run_tests.sh
Frontend/src/: App.jsx  README.md  api.js  index.css
Frontend/src/components/: CvEditorItems.jsx  CvFormEditor.jsx  JdFormEditor.jsx  MainLayout.jsx  ObjectListEditor.jsx  ProtectedRoute.jsx
Frontend/src/hooks/: useAuth.js  useAuth.test.jsx
Frontend/src/pages/: JDAnalysesPage.jsx  JDCVMatcher.jsx  JDCVMatcher.test.jsx  JDDetailPage.jsx  JDEditPage.jsx  JDManagementPage.jsx  LoginPage.jsx  LoginPage.test.jsx  UploadCVsPage.jsx  UserManagementPage.jsx  home.jsx
docs/: api_documentation.md  backend_setup.md  frontend_setup.md  project_overview.md  supabase_setup.md  testing.md
(+15 files in other folders)
